update deps; fix footer spacing

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -53,13 +53,6 @@ body {
   }
 }
 
-.footer {
-  padding: var(--padding);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 button {
   cursor: pointer;
 }
